@@ -947,9 +947,10 @@ scid-4.3
 	* Replace some buttons in help by proper img tags
 	* FICS console uses fixed font
 	* Comment editor now opens by clicking the comment in game info area
-	* Bring Best games / tree graph to front if they exist and the
-	button is pressed again
+	* Bring Best games / tree graph to front if they exist and the button is pressed again
 	* allow Elo-rating corrections up to 2015
+	* Correct move numbers in engine PV output in locked mode
+	  (http://sourceforge.net/tracker/index.php?func=detail&aid=3001826&group_id=26963&atid=389080)
 - Language updates:
 	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
 	* nederland translation (thanks to Leander Laruelle)
